<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/host_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LandingActivity">

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/main_activity_edit_text_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_cities_edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cities_edit_text_explain"
        android:textColor="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_edit_text_cities"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/main_activity_button_cities_weather"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"

        android:text="@string/continue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />




    <Button
        android:id="@+id/main_activity_button_current_location_weather"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_pin"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/current_city_by_gps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/based_on_location_text"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_button_current_location_weather"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:id="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/background" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="start"

                />
            <TextView
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You have 2 choices in order to continue \n1-Get current weather for cities list\n2-Forecast based on your locaiton"
                android:textColor="#aaa"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                />

        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>